--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,21 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Large media files to prevent Git issues
+*.mp4
+*.mov
+*.avi
+*.mkv
+*.webm
+*.flv
+*.wmv
+*.m4v
+*.3gp
+*.ogv
+background-vidz/
+demos/*.mp4
+demos/*.mov
+demos/*.avi
+demos/*.mkv
+demos/*.webm
